fix slider overflow

--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ body{
   gap: 15px;
   width: 100%;
   margin-top: 20px;
-  overflow-y: scroll;
 }
 
 .slider .slide{
@@ -342,6 +341,7 @@ body{
   .slider .slide{
     flex-shrink: 0;
     width: 420px;
+    overflow-x: scroll;
   }
 }
 
